# danfe-generator

./: .gitignore  CLEAN_ARCHITECTURE_EXPLICACAO.md  README_CLEAN_ARCHITECTURE.md  projeto_principal.py  projeto_principal_clean.py  pyproject.toml
src/danfe_generator/: __init__.py  facade.py
src/danfe_generator/adapters/: __init__.py
src/danfe_generator/adapters/formatters/: __init__.py  brazilian_date_formatter.py  brazilian_document_formatter.py
src/danfe_generator/adapters/generators/: __init__.py  standard_zpl_generator.py
src/danfe_generator/adapters/parsers/: __init__.py  xml_nfe_parser.py
src/danfe_generator/domain/: __init__.py
src/danfe_generator/domain/entities/: __init__.py  danfe.py  destinatario.py  emitente.py  nfe_data.py  protocolo.py
src/danfe_generator/domain/interfaces/: __init__.py  date_formatter.py  document_formatter.py  file_search_xml.py  file_writer.py  nfe_parser.py  zpl_generator.py
src/danfe_generator/infrastructure/: __init__.py  file_system_writer.py  file_sytem_search_xml.py
src/danfe_generator/use_cases/: __init__.py  generate_danfe_from_xml.py  save_danfe_to_file.py  search_file_xml.py
